
Copyright (c) 1998-2010 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.1 - December ??, 2010

    Corrected a bug in the Logtalk compiler when checking meta-predicate
    clause heads for errors where the "::" meta-argument mode indicator
    was still be interpreted as "0".

    Corrected a bug in the SWI-Prolog "swihooks.lgt" file that resulted in
    a bogus error message about an invalid Logtalk flag when consulting a
    Prolog file when there is a Logtalk source file with the same name in
    the same directory.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order to
    override the meta-predicate templates for the consult/1 and load_files/2
    built-in predicates.

    Updated the "problog" example, adding preliminary support for the new
    annotated disjunctions syntax.

    Added a "magic" element to the Logtalk mime-type file for the
    freedesktop.org shared mime-info database.


2.42.0 - December 1, 2010

    Added an implementation of persistent object flags, contributed by
    Theofrastos Mantadelis.

    Added a new pair of built-in predicates, conforms_to_protocol/2-3,
    implementing the transitive closure of the protocol implementation
    relation.

    Added an experimental directive, annotation/1, for supporting Logtalk
    integration with other languages such as ProbLog and CHR.

    Reverted the changes in the previous release that allowed a stand-alone
    object to (also) be used as root of class hierarchies.

    Defined a set of low-level utility predicates, available as public methods
    from the "logtalk" built-in object. Modified the (virtual) compilation of