@@ -119,6 +119,12 @@ The predicate arguments in this directive have the following meaning:
 		<dd>Meta-argument that will be a closure used to construct a call by appending <code>N</code> arguments at the end. The value of <code>N</code> must be a non-negative integer.</dd>
 	<dt><code>::</code></dt>
 		<dd>Argument that is context-aware but that will not be called as a goal.</dd>
+	<dt><code>/</code></dt>
+		<dd>Predicate indicator.</dd>
+	<dt><code>[0]</code></dt>
+		<dd>List of goals.</dd>
+	<dt><code>[/]</code></dt>
+		<dd>List of predicate indicators.</dd>
 	<dt><code>*</code></dt>
 		<dd>Normal argument.</dd>
 </dl>
@@ -756,7 +762,7 @@ Currently, there is no clean workaround for calling non-standard Prolog built-in
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: September 4, 2010</span>
+		<span>Last updated on: December 11, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="categories.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="inheritance.html">next</a></span><br/>
